Fix text wrapping on quotes

--- a/services/web/public/stylesheets/app/content_page.less
+++ b/services/web/public/stylesheets/app/content_page.less
@@ -9,4 +9,7 @@
   hr {
     border-color: @hr-border-alt;
   }
+  .quote-by {
+    overflow: hidden;
+  }
 }
